# tt-sim

./: .gitignore  README.md  compare_smoothness.py  eval_robustness.py  pyproject.toml  run.py
assets/fanuc_crx25ia/: crx25ia.urdf  test_mujoco.py  (+1 more)
data/: README.md
docs/: ONBOARDING.md  upgrades_math.tex
models/: .gitignore
results/: eval_3fixes.csv  eval_baseline_lerp.csv  eval_bugfix_openloop_quintic.csv  eval_bugfix_replan_lerp.csv  eval_bugfix_replan_quintic.csv  eval_bugfix_replan_quintic_40ep.csv  eval_fanuc_optA.csv  eval_fanuc_optA_reactive.csv  eval_fanuc_optB.csv  eval_fanuc_replan_quintic.csv  eval_nodrag_e91.csv  eval_nodrag_e91_40ep.csv  eval_predfix_only_replan.csv  eval_replan_lerp.csv  eval_replan_lerp_v2.csv  eval_replan_quintic.csv  eval_replan_quintic_best_video.csv  eval_replan_quintic_v2.csv  eval_replan_quintic_v3.csv  eval_simmatched_openloop_quintic.csv  eval_simmatched_replan_quintic.csv  fanuc_gear_40ep.csv  fanuc_gear_openloop.csv  fanuc_gear_reactive.csv  fanuc_gear_replan.csv  fanuc_gear_rx10.csv  fanuc_replan_robotx08.csv  fanuc_s0_baseline.csv  fanuc_s1_dragbounce.csv  fanuc_s2_specular.csv  fanuc_s3_quintic.csv  fanuc_s4_replan.csv  fanuc_s5_mpc.csv  fanuc_s6_torque_mpc.csv  fanuc_stage_progression.md  robustness_evaluation.md  smoothness_comparison.md  wam_replan_check.csv
tests/: test_eval.py  test_generate.py  test_interfaces.py  test_registry.py  test_tube_disturbance.py  test_tube_linearize.py  test_tube_lqr.py  test_tube_tighten.py
tt_sim/: __init__.py  __main__.py  eval.py  generate.py  interfaces.py  registry.py
(+56 files in other folders)
